update title and styles for rock-paper-scissors game

--- a/rps/styles.css
+++ b/rps/styles.css
@@ -8,5 +8,15 @@ body{
 }
 h1{
     font-size: 3.5rem;
-    color: hsl(0, 0%, 20%);
+    color: hsl(197, 100%, 67%);
+}
+.choices{
+    margin-bottom: 30px;
+}
+.choices button{
+    font-size: 7.5rem;
+    min-width: 160px;
+    margin: 0 10px;
+    border-radius: 25px;
+    background-color: aqua;
 }
