--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     font-weight: bold;
     margin: 0;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
 }
 .list {
