--- a/rps/styles.css
+++ b/rps/styles.css
@@ -23,4 +23,16 @@ h1{
     border-radius: 25px;
     background-color: var(--accent);
     cursor: pointer;
+    transition: background-color 0.5s ease;
+}
+.choices button:hover{
+    background-color: hsl(--accent);
+}
+#playerDisplay, #computerDisplay{
+    font-size: 2.5rem;
+    margin: 10px 0;
+}
+#resultDisplay{
+    font-size: 3rem;
+    margin: 30px 0;
 }
