--- a/rps/styles.css
+++ b/rps/styles.css
@@ -28,7 +28,7 @@ h1{
 .choices button:hover{
     background-color: hsl(--accent);
 }
-#playerDisplay, #computerDisplay{
+#playerDisplay, #botDisplay{
     font-size: 2.5rem;
     margin: 10px 0;
 }
